# qtmultimedia

./: .cmake.conf  .gitignore  .prev_CMakeLists.txt  .qmake.conf  CMakeLists.txt  conanfile.py  config_help.txt  configure  configure.bat  dependencies.yaml  licenseRule.json  qt_cmdline.cmake  qtmultimedia.pro  qtmultimediakit.pro  sync.profile
examples/multimedia/: CMakeLists.txt  README  multimedia.pro
examples/multimedia/audiodecoder/: CMakeLists.txt  audiodecoder.cpp  audiodecoder.h  audiodecoder.pro  main.cpp  wavefilewriter.cpp  wavefilewriter.h
examples/multimedia/audiodevices/: CMakeLists.txt  Info.plist.in  audiodevices.cpp  audiodevices.h  audiodevices.pro  audiodevicesbase.ui  main.cpp
examples/multimedia/audioengine/qml/: audioengine.qml
examples/multimedia/audioinput/: CMakeLists.txt  audioinput.cpp  audioinput.h  audioinput.pro  main.cpp
examples/multimedia/audiooutput/: CMakeLists.txt  audiooutput.cpp  audiooutput.h  audiooutput.pro  main.cpp
examples/multimedia/audiorecorder/: CMakeLists.txt  Info.plist.in  audiolevel.cpp  audiolevel.h  audiorecorder.cpp  audiorecorder.h  audiorecorder.pro  audiorecorder.ui  audiorecorder_small.ui  main.cpp  qaudiolevel.cpp  qaudiolevel.h
examples/multimedia/audiosource/: CMakeLists.txt  audiosource.cpp  audiosource.h  audiosource.pro  main.cpp
examples/multimedia/camera/: CMakeLists.txt  camera.cpp  camera.h  camera.pro  camera.ui  imagesettings.cpp  imagesettings.h  main.cpp  metadatadialog.cpp  metadatadialog.h  videosettings.cpp  videosettings.h
examples/multimedia/camera/android/: AndroidManifest.xml
examples/multimedia/camera/macos/: Info.plist.in
examples/multimedia/declarative-camera/: CMakeLists.txt  CameraButton.qml  CameraListButton.qml  CameraListPopup.qml  CameraPropertyButton.qml  CameraPropertyPopup.qml  FlashControl.qml  FocusButton.qml  Info.plist  Info.plist.in  PhotoCaptureControls.qml  PhotoPreview.qml  Popup.qml  VideoCaptureControls.qml  VideoPreview.qml  ZoomControl.qml  declarative-camera.pro  declarative-camera.qml  declarative-camera.qrc  permission-denied.qml  qmlcamera.cpp
examples/multimedia/declarative-radio/: Button.qml  main.cpp  view.qml
examples/multimedia/devices/: CMakeLists.txt  devices.pro  main.cpp
examples/multimedia/player/: CMakeLists.txt  main.cpp  player.cpp  player.h  player.pro  playercontrols.cpp  playercontrols.h  playlistmodel.cpp  playlistmodel.h  qmediaplaylist.cpp  qmediaplaylist.h  qmediaplaylist_p.cpp  qmediaplaylist_p.h  qplaylistfileparser.cpp  qplaylistfileparser.h  videowidget.cpp
examples/multimedia/radio/: main.cpp  radio.cpp  radio.h
examples/multimedia/screencapture/: CMakeLists.txt  Info.plist.in  main.cpp  screencapture.pro  screencapturepreview.cpp  screencapturepreview.h  screenlistmodel.cpp  screenlistmodel.h  windowlistmodel.cpp  windowlistmodel.h
examples/multimedia/shared/: shared.pri
examples/multimedia/spatialaudio/: CMakeLists.txt  main.cpp  spatialaudio.pro
examples/multimedia/spectrum/: CMakeLists.txt  Info.plist.in  README.txt  app.pro  engine.cpp  engine.h  frequencyspectrum.cpp  frequencyspectrum.h  levelmeter.cpp  levelmeter.h  main.cpp  mainwidget.cpp  mainwidget.h  progressbar.cpp  progressbar.h  settingsdialog.cpp  settingsdialog.h  spectrograph.cpp  spectrograph.h  spectrum.h  spectrum.pri  spectrum.pro  spectrumanalyser.cpp  spectrumanalyser.h  tonegenerator.cpp  tonegenerator.h  tonegeneratordialog.cpp  tonegeneratordialog.h  utils.cpp  utils.h  waveform.cpp  waveform.h
examples/multimedia/spectrum/app/: CMakeLists.txt  app.pro  engine.cpp  engine.h  frequencyspectrum.cpp  frequencyspectrum.h  levelmeter.cpp  levelmeter.h  main.cpp  mainwidget.cpp  mainwidget.h  progressbar.cpp  progressbar.h  settingsdialog.cpp  settingsdialog.h  spectrograph.cpp  spectrograph.h  spectrum.h  spectrumanalyser.cpp  spectrumanalyser.h  tonegenerator.cpp  tonegenerator.h  tonegeneratordialog.cpp  tonegeneratordialog.h  utils.cpp  utils.h  waveform.cpp  waveform.h  wavfile.cpp  wavfile.h
examples/multimedia/video/: CMakeLists.txt  video.pro
examples/multimedia/video/android/: CMakeLists.txt  android.pro
examples/multimedia/video/mediaplayer/: AudioControl.qml  CMakeLists.txt  Main.qml  MetadataInfo.qml  PlaybackControl.qml  PlaybackRateControl.qml  PlaybackSeekControl.qml  PlayerMenuBar.qml  TracksInfo.qml  main.cpp  main.qml  qml.qrc
examples/multimedia/video/qmlvideo/: CMakeLists.txt  Info.plist  Info.plist.in  frequencymonitor.cpp  frequencymonitor.h  frequencymonitordeclarative.cpp  main.cpp  performancemonitor.cpp  performancemonitor.h  performancemonitordeclarative.cpp  performancemonitordeclarative.h  qmlvideo.pro  qmlvideo.qrc  trace.h
examples/multimedia/video/qmlvideofilter_opencl/: CMakeLists.txt  README  main.cpp  main.qml  qmlvideofilter_opencl.pro  rgbframehelper.h
examples/multimedia/video/qmlvideofx/: CMakeLists.txt  filereader.cpp  filereader.h  frequencymonitor.cpp  main.cpp  qmlvideofx.pro  qmlvideofx.qrc  trace.h
examples/multimedia/video/recorder/: AudioInputSelect.qml  CMakeLists.txt  CameraSelect.qml  Controls.qml  Info.plist.in  MediaList.qml  Playback.qml  RecordButton.qml  SettingsEncoder.qml  Style.qml  (+9 more)
examples/multimedia/videographicsitem/: CMakeLists.txt  main.cpp  videographicsitem.pro  videoplayer.cpp  videoplayer.h
examples/multimedia/videowidget/: CMakeLists.txt  main.cpp  videoplayer.cpp  videoplayer.h  videowidget.pro
examples/multimediawidgets/camera/: CMakeLists.txt  camera.cpp  camera.h  camera.pro  camera.ui  camera_mobile.ui  imagesettings.cpp  imagesettings.h  main.cpp  metadatadialog.cpp  metadatadialog.h  videosettings.cpp  videosettings.h  videosettings.ui  videosettings_mobile.ui
examples/spatialaudio/audiopanning/: CMakeLists.txt  audiopanning.pro  main.cpp
src/plugins/multimedia/: CMakeLists.txt
src/resonance-audio/: CMakeLists.txt  resonance_audio.cpp  resonance_audio.h  resonance_audio_api_extensions.cpp  resonance_audio_api_extensions.h
tests/auto/cmake/: CMakeLists.txt
util/macos_test_audio_config/: CMakeLists.txt  README  compile_and_run.sh  main.cpp
(+5475 files in other folders)
