if (QT_FEATURE_gstreamer)
    add_subdirectory(gstreamer)
endif ()
if (QT_FEATURE_pulseaudio)
    add_subdirectory(pulseaudio)
endif ()
if (ANDROID)
    add_subdirectory(android)
endif ()
if (WASM)
    add_subdirectory(wasm)
endif ()
if (APPLE AND NOT WATCHOS)
    add_subdirectory(darwin)
endif ()
if (QT_FEATURE_wmf)
    add_subdirectory(windows)
endif ()
