# Copyright (C) 2022 The Qt Company Ltd.
# SPDX-License-Identifier: BSD-3-Clause

if (QT_FEATURE_ffmpeg)
    add_subdirectory(ffmpeg)
endif ()
if (QT_FEATURE_gstreamer)
    add_subdirectory(gstreamer)
endif ()
if (ANDROID)
    add_subdirectory(android)
endif ()
if (WASM)
    add_subdirectory(wasm)
endif ()
if (APPLE AND NOT WATCHOS)
    add_subdirectory(darwin)
endif ()
if (QT_FEATURE_wmf)
    add_subdirectory(windows)
endif ()
if (QT_FEATURE_mmrenderer)
    add_subdirectory(qnx)
endif ()
